==> Pank51591/Project_Demo/Renesas_Demo/1-书籍配套例程/启明RA2L1/Workspace_e2s/24_Flash_FatFs/src/spi_flash/bsp_spi_flash.c <==
#include "bsp_spi_flash.h"

void SPI_Flash_Init(void)
{
    spi_cs(1);
    R_SPI_Open(g_spi0_flash.p_ctrl, g_spi0_flash.p_cfg);
    R_BSP_SoftwareDelay(10u, BSP_DELAY_UNITS_MILLISECONDS);
}

void SPI_Flash_SendByte(uint8_t byte, bool spi_continue)
{
		g_transfer_complete = false;
	
    uint8_t data[2];
    data[0] = byte;

    spi_cs(0);
    R_SPI_Write(g_spi0_flash.p_ctrl, &data[0], 1, SPI_BIT_WIDTH_8_BITS); //写入一个字节的数据
    while (false == g_transfer_complete)	//判断是否传输数据完成
    {
        ;
    }
    if (spi_continue == true)spi_cs(1);

    else spi_cs(0);
}

void SPI_Flash_ReadByte(uint8_t *byte, uint32_t len, bool spi_continue)
{
		g_transfer_complete = false;
	
    spi_cs(0);
    R_SPI_Read(g_spi0_flash.p_ctrl, byte, len, SPI_BIT_WIDTH_8_BITS);//接收len个字节的数据
    while (false == g_transfer_complete)	//判断是否传输数据完成
    {
        ;
    }
    if (spi_continue == true)spi_cs(1);
    else spi_cs(0);
}

void SPI_Flash_WriteEnable(void)
{
    SPI_Flash_SendByte(WriteEnable, 1);
}

void SPI_Flash_WaitForWriteEnd(void)
{
    uint8_t FLASH_Status = 0;


    /* 发送 读状态寄存器 命令 */
    SPI_Flash_SendByte(ReadStatusReg, 0);

    /* 若FLASH忙碌，则等待 */
    do
    {
        /* 读取FLASH芯片的状态寄存器 */
        SPI_Flash_ReadByte(&FLASH_Status, 1, 0);
        //printf("Read FLASH_Status = %d\r\n",FLASH_Status);

        //FLASH_Status = 1;
    }
    while ((FLASH_Status & WIP_Flag) == (uint8_t)1);        /* 正在写入标志 */

    spi_cs(1);
}

void SPI_Flash_SectorErase(uint32_t adress)
{
    unsigned char data[6] = {};

    data[0] =  SectorErase;     //erase_command
    data[1] = (uint8_t)(adress >> 16);
    data[2] = (uint8_t)(adress >> 8);
    data[3] = (uint8_t)(adress);

    /* 发送FLASH写使能命令 */
    SPI_Flash_WriteEnable();
    SPI_Flash_WaitForWriteEnd();



    spi_cs(0);
    /* 发送扇区擦除指令*/
    R_SPI_Write(g_spi0_flash.p_ctrl, &data[0], 4, SPI_BIT_WIDTH_8_BITS);
    R_BSP_SoftwareDelay(30, BSP_DELAY_UNITS_MICROSECONDS);
    spi_cs(1);


    SPI_Flash_WaitForWriteEnd();
}

uint32_t SPI_Flash_ReadID(void)
{
    unsigned char data[6] = {};
    uint32_t back;
    data[0] = JedecDeviceID;

    SPI_Flash_SendByte(data[0], 0);      //false: close the spi  true: go go go
    SPI_Flash_ReadByte(&data[0], 3, 1);

    /*把数据组合起来，作为函数的返回值*/
    back = (data[0] << 16) | (data[1] << 8) | (data[2]);

    return back;
}

uint32_t SPI_Flash_ReadDeviceID(void)
{


    unsigned char data[6] = {};
    uint32_t back;
    data[0] = DeviceID;
    data[1] = 0xff;

    SPI_Flash_SendByte(data[0], 0);      //false: close the spi  true: go go go
    SPI_Flash_SendByte(data[1], 0);      //false: close the spi  true: go go go
    SPI_Flash_SendByte(data[1], 0);      //false: close the spi  true: go go go
    SPI_Flash_SendByte(data[1], 0);      //false: close the spi  true: go go go
    SPI_Flash_ReadByte(&data[0], 3, 1);

    /*把数据组合起来，作为函数的返回值*/
    back = (data[0] << 16) | (data[1] << 8) | (data[2]);

    return back;
}

void SPI_Flash_PageWrite(uint8_t *pBuffer, uint32_t WriteAddr, uint16_t NumByteToWrite)
{

    /* 发送FLASH写使能命令 */
    SPI_Flash_WriteEnable();

    /* 写页写指令*/
    SPI_Flash_SendByte(PageProgram, 0);
    /*发送写地址的高位*/
    SPI_Flash_SendByte((WriteAddr & 0xFF0000) >> 16, 0);
    /*发送写地址的中位*/
    SPI_Flash_SendByte((WriteAddr & 0xFF00) >> 8, 0);
    /*发送写地址的低位*/
    SPI_Flash_SendByte(WriteAddr & 0xFF, 0);

    if (NumByteToWrite > SPI_FLASH_PerWritePageSize)
    {
        NumByteToWrite = SPI_FLASH_PerWritePageSize;
        printf("SPI_FLASH_PageWrite too large! \r\n");
    }

    //R_QSPI_Write(&Flash_ctrl, pBuffer, WriteAddr, NumByteToWrite);

    /* 写入数据*/
    while (NumByteToWrite--)
    {
        /* 发送当前要写入的字节数据 */
        SPI_Flash_SendByte(*pBuffer, 0);
        /* 指向下一字节数据 */
        pBuffer++;
    }

    spi_cs(1);

    SPI_Flash_WaitForWriteEnd();
}

void SPI_Flash_BufferRead(uint8_t *pBuffer, uint32_t ReadAddr, uint16_t NumByteToRead)
{

    /* 发送 读 指令 */
    SPI_Flash_SendByte(ReadData, 0);

    /* 发送 读 地址高位 */
    SPI_Flash_SendByte((ReadAddr & 0xFF0000) >> 16, 0);
    /* 发送 读 地址中位 */
    SPI_Flash_SendByte((ReadAddr & 0xFF00) >> 8, 0);
    /* 发送 读 地址低位 */
    SPI_Flash_SendByte(ReadAddr & 0xFF, 0);

    /* 读取数据 */
    while (NumByteToRead--)    /* while there is data to be read */
    {
        /* 读取一个字节*/
        SPI_Flash_ReadByte(pBuffer,1,0);
        /* 指向下一个字节缓冲区 */
        pBuffer++;
    }

    /* 停止信号 FLASH: CS 高电平 */
    spi_cs(1);
}

void SPI_Flash_PowerDown(void)
{
		/* 发送 掉电 命令 */
		SPI_Flash_SendByte(PowerDown , 1);
}

void SPI_Flash_WAKEUP(void)
{
  /* 发送 上电 命令 */
  SPI_Flash_SendByte(ReleasePowerDown , 1);
}
